# witty-profiler

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
collector/python/: .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml
collector/python/configs/: config.sample.json  production.json  sample.yaml
collector/python/docs/: configuration.md  files.md  index.md  install.md  progress.md  server_api.md  sop.md  updates.md
collector/python/docs/architecture/: graph-model.md  overview.md
collector/python/docs/backend/: api.md
collector/python/docs/getting-started/: installation.md  quickstart.md
collector/python/docs/monitoring/: collector.md  overview.md
collector/python/docs/profiler/: cache_miss.md  pipe.md  posix_mq.md  sched_monitor.md  socket.md  sysv_msg.md  sysv_sem.md  uds.md
collector/python/docs/user-guide/: running.md
collector/python/src/witty_profiler/: __init__.py  __main__.py
collector/python/src/witty_profiler/backend/: __init__.py  base.py  default_server.py  fastapi_server.py  witty_profiler.py
collector/python/src/witty_profiler/backend/backend_client/: __init__.py  api_client_example.py  remote_backend.py  remote_restful_backend.py
collector/python/src/witty_profiler/collector/: __init__.py  collect_set.py  collector_base.py
collector/python/src/witty_profiler/collector/local_collector/: __init__.py  common_parent_collector.py  container_collector.py  gpu_collector.py  hccs_collector.py  ipc_collector.py  local_collector.py  npu_collector.py  numa_collector.py  rdma_collector.py  shm_collector.py  socket_collector.py  static_collector.py  top_cpu_usage_collector.py
collector/python/src/witty_profiler/collector/remote_collector/: __init__.py  remote_collector.py
collector/python/src/witty_profiler/common/: constants.py  env_manager.py  id_manager.py  logging.py  ns_utils.py  process_lock.py  singleton.py  str_converter.py  timer.py  worker_context.py
collector/python/src/witty_profiler/config/: config.json
collector/python/src/witty_profiler/config_manager/: config_manager.py
collector/python/src/witty_profiler/config_manager/configs/: __init__.py  collector_config.py  global_config.py  server_config.py  sniffer_config.py
collector/python/src/witty_profiler/controller/: witty_profiler_core.py
collector/python/src/witty_profiler/edge/: __init__.py  edge.py  edge_category.py
collector/python/src/witty_profiler/edge/cpu/: __init__.py  cache_monitor.py  cache_sniffer.py  hccs_edge.py  hccs_monitor.py  hccs_sniffer.py  numa_deployment.py  numa_edge.py  numa_sniffer.py  sched_monitor.py  sched_sniffer.py
collector/python/src/witty_profiler/edge/docker/: docker_sniffer.py
collector/python/src/witty_profiler/edge/ipc/: __init__.py  ipc_edge.py  pipe_sniffer.py  sysv_msg_sniffer.py  uds_sniffer.py
collector/python/src/witty_profiler/edge/rdma/: rdma_monitor.py  rdma_sniffer.py
collector/python/src/witty_profiler/edge/shared_memory/: shmm_sniffer.py
collector/python/src/witty_profiler/edge/socket/: socket_edge.py  socket_monitor.py  socket_sniffer.py
collector/python/src/witty_profiler/edge/structual/: __init__.py  attribute.py  belong.py  connection.py
collector/python/src/witty_profiler/edge/xpu/: gpu_access_sniffer.py  npu_access_sniffer.py
collector/python/src/witty_profiler/entity/: __init__.py  entity_base.py  entity_namespace.py
collector/python/src/witty_profiler/entity/deployment/: gpu_deployment.py  npu_deployment.py
collector/python/src/witty_profiler/entity/node_entity/: __init__.py  key_entity.py  node_entity.py  rdma.py  resource_entity.py
collector/python/src/witty_profiler/graph/: graph.py
collector/python/src/witty_profiler/storage/: rotated_file_storage.py
collector/python/src/witty_profiler/subscriber/: __init__.py  subscriber_base.py  subscriber_collection.py  subscribers.py
collector/python/src/witty_profiler/subscriber/implementations/: __init__.py  graph_subscribers.py
collector/python/src/witty_profiler/tools/: build.py  view.py
collector/python/src/witty_profiler/tools/ebpftools/: __init__.py
collector/python/src/witty_profiler/tools/ebpftools/cache_monitor_c/: CMakeLists.txt  cache_miss_version.h  main.cpp
collector/python/src/witty_profiler/visualize/: __init__.py  vis.py
collector/python/src/witty_profiler/visualize/layout/: layout.py  layout_element.py
collector/python/src/witty_profiler/visualize/renderer/: default_renderer.py  drawio_renderer.py  html_renderer.py  renderer_base.py
collector/python/tests/: conftests.py  test_config_loader.py  test_network_collector.py  test_output_writer.py
collector/python/tests/test_backend/: test_base.py  test_fastapi_server.py
collector/python/tests/test_collector/: test_collect_set.py  test_collector_base.py  test_common_parent_collector.py  test_shmm_collector.py  test_socket_collector.py
collector/python/tests/test_common/: test_env_manager.py  test_id_manager.py  test_singleton.py
collector/python/tests/test_common/test_worker_context/: test_process_context_manager.py  test_worker_context_loop.py  test_worker_context_naive.py
collector/python/tests/test_controller/: test_witty_profiler_core.py  test_witty_profiler_server.py
collector/python/tests/test_edge/test_ipc/: ipc_example.py
collector/python/tests/test_edge/test_ipc/test_shmm/: test_shmm_sniffer.py
collector/python/tests/test_edge/test_shmm/: shmm_generator.py
collector/python/tests/test_edge/test_socket/: graph_generator.py  socket_traffic_generator.py  test_socket_monitor.py  test_socket_sniffer.py
collector/python/tests/test_graph/: test_edge.py  test_entity.py  test_entity_namespace.py  test_graph.py  test_visualize_layout.py
collector/python/tests/test_subscriber/: test_collection.py  test_subscribers.py
collector/python/tests/traffic/: sched.py
collector/python/tests/traffic/ipc_traffic/: README.md  __init__.py  sysv_msg_test.py
configs/: config.sample.json  production.json  sample.yaml
docs/: sop.md  (+9 more)
src/anansi/tools/ebpftools/pipe_sniffer/: CMakeLists.txt  main.cpp
src/anansi/tools/ebpftools/pipe_sniffer/dump/: csv.cpp
(+306 files in other folders)
