[project]
name = "witty-profiler"
version = "0.1.0"
description = "Automated data and control stream topology detection for AI training and inferencing framework"
authors = [
    {name = "yaozhenhe", email = "yaozhenhe@huawei.com"},
]
dependencies = [
    "msgspec>=0.20.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "fastapi",
    "uvicorn",
    "networkx>=3.6.1",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.scripts]
witty-profiler = "witty_profiler.__main__:main"
witty-profiler-build = "witty_profiler.tools.build:main"
witty-profiler-vis = "witty_profiler.visualize.vis:main"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
witty_profiler = "src/witty_profiler"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
witty_profiler = ["tools/ebpftools/**/*"]

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "sysv-ipc",
    "posix-ipc",
]
all = [
    "coverage>=7.13.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "basedpyright>=1.38.0",
    "pymongo>=4.16.0",
    "pyvis>=0.3.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]


#[tool.uv]
#index-url="https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.coverage.run]
source = ["src"]          
omit = [
    "tests/*",
    "test_*",
    "*/tests/*",
    "*/test_*",
    "venv/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

